# onnx2keras3

./: README.md  pyproject.toml
onnx2keras3/: __init__.py  convert.py  keras_utils.py  utils.py
onnx2keras3/layers/: __init__.py  convert.py  utils.py
onnx2keras3/layers/activations/: __init__.py  activation.py
onnx2keras3/layers/convolutional/: __init__.py  convolutional.py
onnx2keras3/layers/core/: __init__.py  core.py  utils.py
onnx2keras3/layers/merging/: __init__.py  elementwise.py  utils.py
onnx2keras3/layers/normalization/: __init__.py  normalization_layers.py
onnx2keras3/layers/operation/: __init__.py  operations.py  padding.py  slice.py  utils.py
onnx2keras3/layers/pooling/: __init__.py  pooling_layers.py
onnx2keras3/layers/reshaping/: __init__.py  reshape_layers.py  upsampling_layers.py  utils.py
onnx2keras3/typing/: __init__.py
tests/layers/activations/: activations.py  conftest.py
